feat: updated dependencies

--- a/starter_ml/hugging-face.ipynb
+++ b/starter_ml/hugging-face.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "4b83b516-bfd9-4273-9356-2188e25e7a4d",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "[{'label': 'POSITIVE', 'score': 0.9598049521446228}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1f5a8119-f612-4ddb-b9a6-91eb6f5508b3",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        " 'scores': [0.8445998430252075, 0.11197364330291748, 0.04342653974890709]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "5efda8ba-74f8-4087-b8d1-a00293370be5",
    "metadata": {},
    "outputs": [
@@ -97,10 +97,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': 'In this course, we will teach you how to perform it in some easy to follow and elegant way, in an extremely simple way, with the ability to learn as easily as you are able to at home for a week or two.\\n\\nLearn'}]"
+       "[{'generated_text': 'In this course, we will teach you how to create reusable products and how to build prototypes at the same time. We will look into the advantages of building custom products together with existing software. We will offer practical demos and demos of how we can design'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ee1f4d3c-ddcb-407c-acdf-7dcea83914b6",
    "metadata": {},
    "outputs": [
@@ -128,11 +128,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': 'In this course, we will teach you how to understand it; this course will teach you how to understand it; this course will teach you how to'},\n",
-       " {'generated_text': 'In this course, we will teach you how to play a game to improve your understanding of complex concepts and strategies, and how we will use them to'}]"
+       "[{'generated_text': 'In this course, we will teach you how to get the right tools and get you started. Then, take a step or two from our lesson book'},\n",
+       " {'generated_text': 'In this course, we will teach you how to put together an actual application. This will provide an actual app that provides a user interface that is easy'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,14 +147,6 @@
     "    num_return_sequences=2,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f878f4c-cc6c-4584-982e-e3c6c37dc1f8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
