feat: moved Jupyter example to its own dir

--- a/jupyter_ml/starter_ml/hugging-face.ipynb
+++ b/jupyter_ml/starter_ml/hugging-face.ipynb
@@ -11,8 +11,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be605f32-bca2-41d1-b843-f96e54ef2afa",
+   "metadata": {},
+   "source": [
+    "If there are environment configuration for API keys, load it"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "fab52a24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "if os.path.exists('./env.txt'):\n",
+    "  load_dotenv('./env.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a04baf3-1924-41c0-8fd5-2d7e6d85dc55",
+   "metadata": {},
+   "source": [
+    "Examples from Hugging Face. When running one, a big model will be downloaded from its page to $HOME/.cache/huggingface."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "4b83b516-bfd9-4273-9356-2188e25e7a4d",
    "metadata": {},
    "outputs": [
@@ -30,7 +59,7 @@
        "[{'label': 'POSITIVE', 'score': 0.9598049521446228}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1f5a8119-f612-4ddb-b9a6-91eb6f5508b3",
    "metadata": {},
    "outputs": [
@@ -64,7 +93,7 @@
        " 'scores': [0.8445998430252075, 0.11197364330291748, 0.04342653974890709]}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5efda8ba-74f8-4087-b8d1-a00293370be5",
    "metadata": {},
    "outputs": [
@@ -97,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': 'In this course, we will teach you how to create reusable products and how to build prototypes at the same time. We will look into the advantages of building custom products together with existing software. We will offer practical demos and demos of how we can design'}]"
+       "[{'generated_text': 'In this course, we will teach you how to get the most out of yourself with our program. This will help you in a variety of ways depending on what your goals are. What sort of personality do you want and do you want it to be'}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ee1f4d3c-ddcb-407c-acdf-7dcea83914b6",
    "metadata": {},
    "outputs": [
@@ -128,11 +157,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': 'In this course, we will teach you how to get the right tools and get you started. Then, take a step or two from our lesson book'},\n",
-       " {'generated_text': 'In this course, we will teach you how to put together an actual application. This will provide an actual app that provides a user interface that is easy'}]"
+       "[{'generated_text': 'In this course, we will teach you how to apply for the certificate of admission and how to do so in our next course.\\n\\n\\n\\n'},\n",
+       " {'generated_text': 'In this course, we will teach you how to be content in your world and can be as successful in your life as you are.\\n\\n\\n'}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,6 +176,14 @@
     "    num_return_sequences=2,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0601e15b-9727-46ee-be51-14c4be1e9f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
